Rework macos build script to work from Linux. Add Linux and Windows builds.